package br.com.rpg.model.enums;

/**
 * Enum para definir elementos presentes no jogo.
 * <p>
 * É usado pelas ...
 */

public enum TipoElemento {
    /**
     * Elemento majoritariamente físico, geralmente usado em habilidades de corte.
     */
    NEUTRO,
    /**
     * Elemento usado em magias ou ataques como ...
     */
    FOGO,
    /**
     * Elemento usado em magias ou ataques como ...
     */
    GELO,
    /**
     * Elemento usado unicamente em magias como ...
     */
    ELETRICO,
    /**
     * Elemento usado unicamente em magias como ...
     */
    TERRA,
}
